<resources>
    <string name="app_name">Apps Don\'t Lie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_rank">Your Ranking</string>
    <string name="your_progress">My Progress</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="your_details">Basic Details</string>
    <string name="weight">Current Weight :</string>
    <string name="steps">Steps Taken :</string>
    <string name="calories">Calories Burnt :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_my_progress">My Progress</string>
    <string name="height">Current Height</string>
    <string name="gender">Gender</string>
    <string name="female_male">F/M</string>
    <string name="title_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="sign_out">Sign Out</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="action_share">Share</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="empty_list">No data available</string>
    <string name="long_press">Long press to see the status</string>
    <string name="navigation">Navigate</string>
    <string name="showImage">Show the image</string>
    <string name="name">Name</string>
    <string name="kgs">kgs</string>
    <string name="cms">cms</string>
    <string name="pickImage">Pick Image</string>
    <string name="connection_lost">Connection lost.  Cause: Network Lost.</string>
    <string name="connection_error">Connection lost.  Reason: Service Disconnected</string>
</resources>
