<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />

</menu>
