<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.neha.appsdontlie_capstonestage2.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageViewShow"
                android:contentDescription="@string/showImage"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"

                android:padding="@dimen/activity_horizontal_margin"
                />



            <TextView
                android:id="@+id/name_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/steps"
                android:contentDescription="@string/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/steps"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/step_count"
                android:contentDescription="@string/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/calories"
                android:contentDescription="@string/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"

                android:text="@string/calories"
                android:textSize="@dimen/text_size_20"

                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/calories_count"
                android:contentDescription="@string/calories"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_size_20"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/weight"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/kgs"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:inputType="numberDecimal"

                android:text="@string/height"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/cms"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/gender"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/gender_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/female_male"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_size_20" />


        </LinearLayout>


</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab_rank"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:contentDescription="@string/action_share"
        app:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_share"
        app:pressedTranslationZ="@dimen/fab_press_translation_z" />
</FrameLayout>
